refactor: BeanFactory 변수 이름 변경